# crowbar-info

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cbi/: Cargo.toml  README.md
cbi/examples/: py_pipe.py
cbi/src/: cli.rs  fmt.rs  json_loop.rs  main.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  prelude.rs  types.rs
